now passing the diva event to their callback functions, gitignore, remove mangle:false from gulp-uglify

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div class="test02 test"><div>0,2</div></div>
 <div class="test12 test"><div>1,2</div></div>
 
-<script src="./release/diva.js"></script>
+<script src="./release/diva.min.js"></script>
 <script type="text/javascript">
 	diva.always('.test00', function() {
 		console.log('.test00 scrolled into view!');
