--- a/index.html
+++ b/index.html
@@ -44,24 +44,24 @@
 
 <script src="./release/diva.min.js"></script>
 <script type="text/javascript">
-	diva.always('.test00', function() {
+	diva.always('.test00', {offset: '10%'}, function() {
 		console.log('.test00 scrolled into view!');
-	})
+	});
 	diva.always('.test01', function() {
 		console.log('.test01 scrolled into view!');
-	})
+	});
 	diva.always('.test10', function() {
 		console.log('.test10 scrolled into view!');
-	})
+	});
 	diva.always('.test11', function() {
 		console.log('.test11 scrolled into view!');
-	})
+	});
 	diva.always('.test02', function() {
 		console.log('.test02 scrolled into view!');
-	})
+	});
 	diva.always('.test12', function() {
 		console.log('.test12 scrolled into view!');
-	})
+	});
 </script>
 </body>
 </html>
